--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" type="text/css" href="C:\Users\Devon Wall\Desktop\projects\Excursions\resources\css\style.css">
     <meta charset="utf-8">
     <title>Excursions project</title>
   </head>
