added h2 and paragraph

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Excursions project</title>
   </head>
   <h1>Discover hidden places in the world around you</h1>
+  <p>Download Excursion (coming soon) </p>
   <body>
+    <h2>Your personal travle guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
   </body>
 </html>
